--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -1,7 +1,7 @@
 <nav id="drawer" #drawer>
     <ul>
         <li>
-            <a href="/"><img src="../../assets/icons/landing_icon.png" alt=""></a>
+            <a routerLink="/"><img src="../../assets/icons/landing_icon.png" alt=""></a>
             <label>Domov</label>
         </li>
         <div class="apps">
