Login almost done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<app-login *ngIf="userService.loggedIn == false"></app-login>
-
-<div *ngIf="userService.loggedIn">
-    <app-navbar></app-navbar>
-    <app-drawer></app-drawer>
-    <app-container ></app-container>
-</div>
+<router-outlet></router-outlet>
