--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -1,6 +1,8 @@
 // colors
 $base-color: #3DA8CC;
 $base-shade: #1F81A2;
+$accent-color: #FFA545;
+$accent-shade1:#FF921F;
 $neutral-gray-light: #F9FAFB;
 
 //shadows
