--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,9 +1,12 @@
-@import "src/assets/shared/variables.scss";
+@import '../../assets/shared/variables.scss';
 
-#container{
-    background: $neutral-gray-light;
-    width: 900px;
-    margin: auto;
-    height: 100vh;
-    overflow-y: auto;
+footer{
+    position: absolute;
+    width: 100vw;
+    background: $base-shade;
+    color: white;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    padding: 7px;
 }
