--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -2,12 +2,12 @@
     <ul>
         <li>
             <a href="http://www.spsjm.sk/">
-                <img src="http://www.spsjm.sk/wp-content/uploads/WEB-photo/logo_spsjm_anim_2.gif" alt="spsjm logo">
+                <img src="../../../assets/img/spsjm_logo_static.png" alt="spsjm logo">
             </a>
         </li>
-        <a routerLink='/profile'><li id="name">Kristián Palovič</li></a>
+        <a routerLink='/user/profile'><li id="name">Kristián Palovič</li></a>
         <div class="staticLinks">
-            <a routerLink='/faq'><li>Faq/Tipy</li></a>
+            <a routerLink='/user/faq'><li>Faq/Tipy</li></a>
             <a (click)="onLogout()"><li>Log out</li></a>
         </div>
     </ul>
