--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -5,7 +5,7 @@
                 <img src="../../../assets/img/spsjm_logo_static.png" alt="spsjm logo">
             </a>
         </li>
-        <a routerLink='/user/profile'><li id="name">Kristián Palovič</li></a>
+        <a routerLink='/user/profile'><li id="name">{{studentName}}</li></a>
         <div class="staticLinks">
             <a routerLink='/user/faq'><li>Faq/Tipy</li></a>
             <a (click)="onLogout()"><li>Log out</li></a>
