--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,3 +1,6 @@
-<div class="container-background-color">
-    <p>Ahoj</p>
+<div id="container-primary-logedin">
+    <div class="container-background-color">
+        <p>Ahoj</p>
+    </div>
 </div>
+
