--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div class="content-primary-loggedin">
+    <div class="upper">
+        <div class="headerHolder">
+            <h2>{{student.name}} {{student.surrname}}</h2>
+        </div>
+    </div>    
+</div>
+
