filtre, add event, zobrazovanie class a personal cal

--- a/src/app/login/chaned-pass/chaned-pass.component.html
+++ b/src/app/login/chaned-pass/chaned-pass.component.html
@@ -15,6 +15,7 @@
       type="password"
       name="password"
       id="password"
+      class="typicalInput" 
       formControlName="password"
     />
 
@@ -33,10 +34,12 @@
       type="password"
       name="checkPassword"
       id="checkPassword"
+      class="typicalInput" 
       formControlName="checkPassword"
     />
     <button
       type="submit"
+      class="typicalInput" 
       style="cursor: pointer;"
       [disabled]="changePassForm.invalid"
     >
