--- a/src/assets/shared/variables.scss
+++ b/src/assets/shared/variables.scss
@@ -13,6 +13,7 @@ $text-default : #424242;
 
 //shadows
 $default-darker-shadow: #00000013;
+$hover-shadow: #0000006e;
 
 // font 
 $font-size-nav: 1.5em;
