--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
         <p class="invalid">*E-mail nemá správny formát</p>
       </div>
 
-      <input name="email" id="email" formControlName="email" />
+      <input name="email" id="email" class="typicalInput" formControlName="email" />
       <label
       [appFormChecking]="loginForm"
       [formCheckingInputParam]="'password'"
@@ -43,11 +43,13 @@
         type="password"
         name="password"
         id="password"
+        class="typicalInput" 
         formControlName="password"
       />
       <button
         type="submit"
         style="cursor: pointer;"
+        class="typicalInput" 
         [disabled]="loginForm.invalid"
       >
         Submit
