--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,10 +15,11 @@ body{
   overflow-y: auto;
 }
 
-a {
+a, button {
   cursor: pointer;
   color: $neutral-gray-dark;
   text-decoration: none;
+  outline: none;
 }
 a:hover{
   transition: 100ms ease-in-out;
@@ -40,6 +41,33 @@ button:disabled {
   background: $neutral-gray-light;
   height: 100%;
 }
+
+//typical inputs - login, forms, etc
+
+input{
+  outline: none;
+}
+
+.typicalInput, button[type=submit].typicalInput{
+  background: white;
+  height: 3.6458333333333335vw;
+  border: none;
+  border-radius: 25px;
+  box-shadow: 2px 6px 0 $default-darker-shadow;
+  padding-left: 20px;
+  font-size: 1.5625vw;
+  outline: none;
+}
+
+button.clear{
+  background: none;
+  font-size: 20px;
+  background: none;
+  border: none;
+  color: $text-default;
+  opacity: .7;
+}
+
 
 // scrollbar
 
