--- a/src/app/main/calendar/add/add.component.scss
+++ b/src/app/main/calendar/add/add.component.scss
@@ -73,12 +73,10 @@
           select.typicalInput{
               width: 100%;
               color: $base-color;
-
+              border: none;
 
               option{
                 border: none;
-
-
               }
           }
           .typicalInput {
@@ -133,6 +131,8 @@
 
         text-align: center;
         font-size: 20px;
+
+        width: 120px;
       }
 
       button.clear{
