--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,16 +42,25 @@ button:disabled {
   height: 100%;
 }
 
+ul{
+  padding: 0;
+}
+
+li{
+  list-style: none;
+}
+
 //typical inputs - login, forms, etc
 
 input, button{
   outline: none;
+  border: none;
 }
 
 .typicalInput, button[type=submit].typicalInput{
   background: white;
   height: 3.6458333333333335vw;
-  border: none;
+
   border-radius: 25px;
   box-shadow: 2px 6px 0 $default-darker-shadow;
   padding-left: 20px;
@@ -64,7 +73,6 @@ input, button{
   .showPass,.hidePass{
     width: 24px;
     height: 24px;
-    border: none;
     position: absolute;
     right: 0;
     top: 35%;
@@ -80,7 +88,6 @@ input, button{
 button.clear{
   background: none;
   font-size: 20px;
-  border: none;
   color: $text-default;
   opacity: .7;
 }
@@ -103,3 +110,5 @@ button.clear{
 ::-webkit-scrollbar-thumb:hover {
   background: #3b3b3b;
 }
+
+
